--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ a {
 
 .top-campaign {
   margin-top: 2.5rem;
+  padding-bottom: 0.1875rem;
 }
 
 .top-footer {
@@ -432,6 +433,11 @@ a {
   margin-top: 2.45rem;
 }
 
+.blog-cards__item {
+  margin: auto;
+  max-width: 32.5rem;
+}
+
 .blog-cards--2col {
   width: 100%;
 }
@@ -540,13 +546,16 @@ a {
   padding-top: 5.3125rem;
 }
 
+.campaign {
+  overflow: hidden;
+}
+
 .campaign__inner {
   position: relative;
 }
 
 .campaign__slider {
   margin-right: calc(50% - 50vw);
-  overflow: hidden;
 }
 
 .campaign__swiper {
@@ -589,8 +598,7 @@ a {
 }
 
 .card-01__img img {
-  height: 11.75rem;
-  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -777,9 +785,8 @@ a {
 }
 
 .card-03__img img {
-  width: 100%;
   object-fit: cover;
-  height: 7.3125rem;
+  height: 100%;
 }
 
 .card-03__content {
@@ -1631,7 +1638,7 @@ a {
 }
 
 .page-2rows__main {
-  /* margin: auto; */
+  margin: 0 auto;
   max-width: 44.125rem;
   width: 100%;
 }
@@ -1749,6 +1756,7 @@ page-about .about__contents--page {
   grid-template-rows: repeat(auto-fit, 1fr);
   margin: 2.5rem auto 0;
   width: 81.1594202899%;
+  max-width: 32.5rem;
 }
 
 .page-campaign__card-item:hover .card-01__img {
@@ -2185,7 +2193,7 @@ page-about .about__contents--page {
 
 .page-voice__items {
   margin: 2.5rem auto 0;
-  max-width: 37.5rem;
+  max-width: 32.5rem;
   width: 100%;
 }
 
@@ -2238,7 +2246,6 @@ page-about .about__contents--page {
 
 .pagination a:hover {
   background-color: #408f95;
-  color: #fff;
 }
 
 .pagination__prev {
@@ -2277,14 +2284,14 @@ page-about .about__contents--page {
   left: 0.75rem;
 }
 
-.pagination__prev:hover::before {
-  border-bottom: 0.0625rem solid #fff;
-  border-left: 0.0625rem solid #fff;
+.pagination__prev a:hover::before {
+  border-bottom-color: #fff;
+  border-left-color: #fff;
 }
 
-.pagination__next:hover::before {
-  border-bottom: 0.0625rem solid #fff;
-  border-right: 0.0625rem solid #fff;
+.pagination__next a:hover::before {
+  border-bottom-color: #fff;
+  border-right-color: #fff;
 }
 
 .pagination--detail {
@@ -2472,8 +2479,9 @@ page-about .about__contents--page {
 }
 
 .price__img img {
-  height: auto;
-  width: 100%;
+  height: 100%;
+  width: auto;
+  object-fit: cover;
 }
 
 .price__items {
@@ -3313,6 +3321,11 @@ page-about .about__contents--page {
     margin-top: 0;
   }
 
+  .blog-cards__item {
+    margin: 0;
+    max-width: none;
+  }
+
   .blog-cards--2col {
     gap: 4.9rem 2.5rem;
     grid-template-columns: repeat(2, 1fr);
@@ -3930,6 +3943,7 @@ page-about .about__contents--page {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     width: 100%;
+    max-width: none;
   }
 
   .page-campaign .card-01__header--page {
@@ -4208,7 +4222,7 @@ page-about .about__contents--page {
   }
 
   .price__inner {
-    max-width: 67.5rem;
+    max-width: 70.625rem;
   }
 
   .price__header .section-header__jatitle {
@@ -4225,10 +4239,6 @@ page-about .about__contents--page {
   .price__img {
     aspect-ratio: 492/746;
     margin-left: 8.7037037037%;
-  }
-
-  .price__img img {
-    max-width: 1033px;
   }
 
   .price__items {
@@ -4465,8 +4475,7 @@ page-about .about__contents--page {
   }
 
   .voice__inner {
-    max-width: 67.5rem;
-    box-sizing: content-box;
+    max-width: 70.625rem;
   }
 
   .voice__header .section-header__jatitle {
@@ -4855,6 +4864,7 @@ page-about .about__contents--page {
   font-size: 0.875rem;
   line-height: 1.571428;
   width: 100%;
+  margin-left: 1.5rem;
 }
 
 .page-contact__privacy-label {
@@ -5044,6 +5054,17 @@ span.wpcf7-spinner {
   box-shadow: 0px 0px 0px 1px transparent, 0px 0px 3px 2px transparent;
 }
 
+.page-contact__Indication {
+  font-size: 0.75rem;
+  margin-top: 2.5rem;
+  text-align: center;
+  color: #0d2936;
+}
+
+.grecaptcha-badge {
+  visibility: hidden;
+}
+
 @media screen and (min-width: 768px) {
   .cf7__list-box {
     align-items: flex-start;
@@ -5081,16 +5102,9 @@ span.wpcf7-spinner {
   .cf7__button {
     margin-top: 2.5rem;
   }
-}
 
-.page-contact__Indication {
-  font-size: 0.75rem;
-  margin-top: 2.5rem;
-  text-align: center;
-  color: #0d2936;
-}
-
-.grecaptcha-badge {
-  visibility: hidden;
+  .page-contact__privacy {
+    margin-left: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
